number of fixes allowing users to authenticate now

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,13 @@
             "type": "path",
             "url": "../../packages/LaravelEveTools/eveapi"
         }
-    ]
+    ],
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Xup\\Core\\CoreServiceProvider"
+            ]
+        }
+    }
+
 }
