Can Register Fleet

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     },
     "minimum-stability": "stable",
     "require": {
+        "php": "^7.4|^8.0",
         "laravel/framework": "^8.54",
         "laravelevetools/eve-api": "^1.0"
     },
